--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   cloud_firestore: 5.5.0
   cloud_firestore_platform_interface: 6.5.0
   cloud_firestore_web: 4.3.4
+  cloud_functions: 5.1.5
+  cloud_functions_platform_interface: 5.5.39
+  cloud_functions_web: 4.10.4
   collection: 1.19.0
   csslib: 0.17.3
   dropdown_button2: 2.3.9
@@ -58,6 +61,7 @@ dependencies:
   firebase_storage: 12.3.2
   firebase_storage_platform_interface: 5.1.33
   firebase_storage_web: 3.10.5
+  firebase_vertexai: 1.0.1
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.4.1
   flutter_plugin_android_lifecycle: 2.0.20
@@ -175,6 +179,7 @@ flutter:
     - assets/pdfs/
     - assets/jsons/
 
+    - assets/environment_values/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
