--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   from_css_color: 2.0.0
   go_router: 12.1.3
   google_fonts: 6.1.0
+  google_mobile_ads: 5.1.0
   google_sign_in: 6.2.1
   google_sign_in_android: 6.1.30
   google_sign_in_ios: 5.7.7
