--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -23,10 +23,10 @@
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint --max-warnings=0 .",
-    "serve": "firebase -P smart-meal-a-i-1gu04c emulators:start --only functions",
-    "shell": "firebase -P smart-meal-a-i-1gu04c functions:shell",
+    "serve": "firebase -P smartmealai-f7fdb emulators:start --only functions",
+    "shell": "firebase -P smartmealai-f7fdb functions:shell",
     "start": "npm run shell",
-    "logs": "firebase -P smart-meal-a-i-1gu04c functions:log",
+    "logs": "firebase -P smartmealai-f7fdb functions:log",
     "compile": "cp ../../tsconfig.template.json ./tsconfig-compile.json && tsc --project tsconfig-compile.json"
   },
   "engines": {
