--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,21 +3,23 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>116169147208-84d5tqs8k1pu9irqopsrn4hsr52mpq4j.apps.googleusercontent.com</string>
+	<string>265487456600-oovrrsrvh0sl5fun45qhe1dt7n5nm07h.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.116169147208-84d5tqs8k1pu9irqopsrn4hsr52mpq4j</string>
+	<string>com.googleusercontent.apps.265487456600-oovrrsrvh0sl5fun45qhe1dt7n5nm07h</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>265487456600-3j2aieuos8mu8r03n936a9cng4555k5c.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCwL-7F9u23NAgRm9sUf9woKrlFGpCAXr0</string>
+	<string>AIzaSyAH9X_TUAk3bW7Rh0rIBKcZgqjCl22pwzg</string>
 	<key>GCM_SENDER_ID</key>
-	<string>116169147208</string>
+	<string>265487456600</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.mycompany.smartmealai</string>
 	<key>PROJECT_ID</key>
-	<string>smart-meal-a-i-1gu04c</string>
+	<string>smartmealai-f7fdb</string>
 	<key>STORAGE_BUCKET</key>
-	<string>smart-meal-a-i-1gu04c.firebasestorage.app</string>
+	<string>smartmealai-f7fdb.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:116169147208:ios:7d491c504f4dddf91d297d</string>
+	<string>1:265487456600:ios:6a96943ba854a057816d2d</string>
 </dict>
 </plist>
